--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.jackson.deserialization.accept-single-value-as-array=true
+
+
+# mongo configuration
+mongo.uri=${MONGO_URI}
+mongo.database=${MONGO_DATABASE}
